--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "@types/socket.io": "^2.1.13",
     "body-parser": "^1.19.0",
+    "cookie-session": "^2.1.0",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.5.0",
@@ -25,8 +25,8 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
+    "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.15",
-    "@types/express-session": "^1.17.3",
     "@types/multer": "^1.4.5",
     "@types/mysql": "^2.15.21",
     "@types/node": "^14.14.35",
